# ai-gateway

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT_CONTEXT.md  README.md  architecture.md  config.toml.example  installer.sh
.github/workflows/: ci-cd.yml
k8s/apps/ai-gateway/: deployment.yaml  hpa.yaml  ingress.yaml  sealedsecret.yaml  service.yaml
migrations/: .gitkeep  20250412_create_conversations.sql
policies/: tools.rego
src/: cli.rs  config.rs  main.rs  observability.rs
src/agent/: core.rs  mod.rs
src/auth/: jwt.rs  mod.rs
src/encryption/: age.rs  mod.rs
src/middleware/: rate_limit.rs
src/observability/: mod.rs
src/policy/: mod.rs  opa.rs
src/queue/: consumer.rs  in_memory.rs  mod.rs  producer.rs
src/storage/: mod.rs  postgres.rs  redis.rs  sqlite.rs
src/tools/: code_helper.rs  file_reader.rs  homelab_api.rs  memory_recall.rs  mod.rs  pdf_book_loader.rs  registry.rs  shell_executor.rs  web_search.rs
tests/: integration.rs
