[workspace]
members = ["."]

[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"
authors = ["AI Gateway <developer@localhost>"]
description = "Self-hosted offline-first AI orchestrator gateway"
license = "MIT"
repository = "https://github.com/youtmaj11/ai-gateway"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.24"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "macros", "migrate"] }
async-trait = "0.1"
once_cell = "1.18"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
ureq = "2.7"
urlencoding = "2.1"
regorus = { version = "0.9.1", features = ["std"] }
lapin = "2.3"
lopdf = "0.27"
toml = "0.8"
