[workspace]
members = ["."]

[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"
authors = ["AI Gateway <developer@localhost>"]
description = "Self-hosted offline-first AI orchestrator gateway"
license = "MIT"
repository = "https://github.com/youtmaj11/ai-gateway"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
once_cell = "1.18"
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
ureq = "2.7"
urlencoding = "2.1"
regorus = { version = "0.9.1", features = ["std"] }
indicatif = "0.17"
lapin = "4.4"
lopdf = "0.40"
toml = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.10"
rand_core = "0.6"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
